# SZE-MOSZE-2020-Memory-leak

./: .gitignore  Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  HeroFileError.h  HeroFileError_8h_source.html  HeroSVGRenderer.cpp  HeroSVGRenderer.h  HeroSVGRenderer_8h_source.html  HeroTextRenderer.cpp  HeroTextRenderer.h  HeroTextRenderer_8h_source.html  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  ObserverSVGRenderer_8h_source.html  ObserverTextRenderer.cpp  ObserverTextRenderer.h  ObserverTextRenderer_8h_source.html  PreparedGame.cpp  PreparedGame.h  PreparedGame_8h_source.html  (+144 more)
Docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+17 more)
test/: CMakeLists.txt  expected.txt  expected_sc1.txt  expected_sc2.txt  input_sc1.txt  input_sc2.txt  jsonparserTest.cpp  projectTest.cpp  run-test.sh
test/units/: badunit.json  kakarott.json  kekarott.json  kikarott.json
(+5 files in other folders)
